<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp">

        <LinearLayout
            android:id="@+id/userLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:text="@string/create_a_new_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/name_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/full_name"
                android:inputType="textCapWords" />


            <EditText
                android:id="@+id/email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress" />


            <EditText
                android:id="@+id/address_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:gravity="start"
                android:hint="@string/address"
                android:inputType="textCapWords"
                android:padding="9dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="start"
                android:orientation="horizontal"
                android:padding="9dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="+254"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/contact_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/enter_contact"
                    android:inputType="number" />

            </LinearLayout>


            <EditText
                android:id="@+id/password_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirmPassword_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <LinearLayout
                android:id="@+id/genders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/choose_gender" />

                <Spinner
                    android:id="@+id/gender_select_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bloods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/select_blood_type" />

                <Spinner
                    android:id="@+id/blood_select_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/select_user_type" />

                <Spinner
                    android:id="@+id/user_reg_select_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/signup" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:background="#7a8b8b8b" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or" />

                <View
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:background="#7a8b8b8b" />


            </LinearLayout>

            <TextView
                android:id="@+id/Tv_BloodBank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/register_as_a_blood_bank"
                android:textColor="@color/red_light" />


            <TextView
                android:id="@+id/Tv_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="25dp"
                android:text="@string/already_have_an_account_sign_in"
                android:textColor="@color/black" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/bankLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:text="@string/create_a_new_blood_bank_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/bank_name_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:hint="@string/bank_name"
                android:inputType="textCapWords"
                android:padding="9dp" />


            <EditText
                android:id="@+id/bank_email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="9dp" />

            <EditText
                android:id="@+id/bank_address_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:gravity="start"
                android:hint="@string/address"
                android:inputType="textCapWords"
                android:padding="9dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="start"
                android:orientation="horizontal"
                android:padding="9dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="+254" />

                <EditText
                    android:id="@+id/bank_contact_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/enter_contact"
                    android:inputType="number" />

            </LinearLayout>


            <EditText
                android:id="@+id/bank_password_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="9dp" />

            <EditText
                android:id="@+id/bank_confirmPassword_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="9dp" />

            <Button
                android:id="@+id/bank_btn_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/signup" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:background="#7a8b8b8b" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or" />

                <View
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:background="#7a8b8b8b" />


            </LinearLayout>

            <TextView
                android:id="@+id/Tv_changeUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/register_as_a_user_donor"
                android:textColor="@color/red_light" />


            <TextView
                android:id="@+id/Tv_bank_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="25dp"
                android:text="@string/already_have_an_account_sign_in"
                android:textColor="@color/black" />

        </LinearLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>